# switch-statement-rust

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
